HW_2/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-2
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hw-2
  template:
    metadata:
      labels:
        app: hw-2
    spec:
      containers:
        - name: hw-2
          image: "igorizhov/otus_ms_23_hw_1c"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
